Start building training data for seq2seq model

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,9 @@ pandas = "^2.2.3"
 pyarrow = "^17.0.0"
 fsspec = "^2024.9.0"
 huggingface-hub = "^0.25.1"
-numpy = "^2.1.1"
 datasets = "^3.0.1"
+fsspec = "^2024.9.0"
+numpy = "^2.1.1"
 
 
 [build-system]
