--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 *.pdf filter=lfs diff=lfs merge=lfs -text
 *prompt_pairs.json filter=lfs diff=lfs merge=lfs -text
+*.pt filter=lfs diff=lfs merge=lfs -text
+*.pth filter=lfs diff=lfs merge=lfs -text
+*.safetensors filter=lfs diff=lfs merge=lfs -text
