Add Claude and Gemini dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,8 @@ tzdata = "2024.2"
 urllib3 = "2.2.3"
 xxhash = "3.5.0"
 yarl = "1.15.2"
+anthropic = "^0.40.0"
+vertexai = "^1.71.1"
 
 [build-system]
 requires = ["poetry-core"]
